замена отрицаельных маржинов на ГЕЙП

--- a/index.html
+++ b/index.html
@@ -44,11 +44,16 @@
 	  </div>
 	  <!--преимущества-->
 
-	  <section class="section">
+	  <section class="section-advantages">
 		<div class="container">
 			 <H2 class="visually-hidden">Advantages</H2>
-		  <ul class="advantages list ">
+		  <ul class="advantages list">
 			<li class="advantages-item">
+				<div class="advantages-icon">
+					 <svg class="" width="70" height="70">
+						<use href="./IMG/icon/antenna2.svg"></use>
+					 </svg>
+				</div>
 				  <h3 class="advantages-title">Attention to detail</h3><p class="advantages-text">Ideological markets, as well as the beginning of daily work on the formation of a position.</p>
 			</li>
 			<li class="advantages-item">
