--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
 	  </header>
 
 		  <!--набор сервисов-->
-	<main class="main">
-	<section class="section filter">
+	<main>
+	<section class="section-filter">
 	  <div class="container">
 		  <h1 class="visually-hidden">Portfolio</h1>
 		<ul class="filter-list list">
