--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>git</title>
+	 <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 	 <link rel="stylesheet" href="./CSS/common.css">
@@ -27,7 +28,8 @@
 		  </ul>
 		  </nav>
 		  	<ul class="auth-nav list">
-			  <li class="auth-nav-item"><a href="" class="link">info@devstudio.com</a></li>
+				<li> <a class="contacts-data" href="mailto:info@devstudio.com"> </a> </li>
+			  <li class="auth-nav-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
 			  <li class="auth-nav-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 		  </ul>
 		</div>
@@ -48,21 +50,37 @@
 		<div class="container">
 			 <H2 class="visually-hidden">Advantages</H2>
 		  <ul class="advantages list">
+
 			<li class="advantages-item">
 				<div class="advantages-icon">
 					 <svg class="" width="70" height="70">
-						<use href="./IMG/icon/antenna2.svg"></use>
+						<use href="./IMG/sprite.svg#icon-antenna"></use>
 					 </svg>
 				</div>
 				  <h3 class="advantages-title">Attention to detail</h3><p class="advantages-text">Ideological markets, as well as the beginning of daily work on the formation of a position.</p>
 			</li>
 			<li class="advantages-item">
+				<div class="advantages-icon">
+					<svg width="70" height="70">
+						<use href="./IMG/sprite.svg#"></use>
+					</svg>
+				</div>
 				<h3 class="advantages-title">Punctuality</h3><p class="advantages-text">The task of the organization, in particular the framework and place of training of personnel entails.</p>
 			</li>
 			<li class="advantages-item">
+				<div class="advantages-icon">
+					<svg width="70" height="70">
+						<use href="./IMG/sprite.svg/#antenna.svg"></use>
+					</svg>
+				</div>
 				<h3 class="advantages-title">Planning</h3><p class="advantages-text">Similarly, consultation with a broad asset is largely conditional.</p>
 			</li>
 			<li class="advantages-item">
+				<div class="advantages-icon">
+					<svg width="70" height="70">
+						<use href="./IMG/sprite.svg/#antenna.svg"></use>
+					</svg>
+				</div>
 				<h3 class="advantages-title">Modern technology</h3><p class="advantages-text">The significance of these problems is so obvious that the implementation of planned targets.</p>
 			</li>
 		  </ul>
