--- a/index.html
+++ b/index.html
@@ -27,14 +27,21 @@
 			  <li class="item"><a href="" class="link">Contact</a></li>
 		  </ul>
 		  </nav>
+
 		  	<ul class="auth-nav list">
-				<li> <a class="contacts-data" href="mailto:info@devstudio.com"> </a> </li>
-			  <li class="auth-nav-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-			  <li class="auth-nav-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+			  <li class="auth-nav-item">
+				<a class="contacts-data" href="mailto:info@devstudio.com"><svg class="contacts-svg" width="16" height="12">
+					<use href="./IMG/symbol-defs.svg#icon-envelope"></use>
+				</svg>info@devstudio.com</a>
+			  </li>
+			  <li class="auth-nav-item">
+				<a href="tel:+380961111111" class="contacts-data"><svg class="contacts-svg" width="16" height="12">
+					<use href="./IMG/symbol-defs.svg#icon-tel"></use>
+				</svg>+38 096 111 11 11</a>
+			</li>
 		  </ul>
 		</div>
 	  </header>
-
 	  
 	  <main> 
 	  <!--герой-->
@@ -54,7 +61,7 @@
 			<li class="advantages-item">
 				<div class="advantages-icon">
 					 <svg class="" width="70" height="70">
-						<use href="./IMG/sprite.svg#icon-antenna"></use>
+						<use href="./IMG/symbol-defs.svg#icon-antenna"></use>
 					 </svg>
 				</div>
 				  <h3 class="advantages-title">Attention to detail</h3><p class="advantages-text">Ideological markets, as well as the beginning of daily work on the formation of a position.</p>
@@ -62,7 +69,7 @@
 			<li class="advantages-item">
 				<div class="advantages-icon">
 					<svg width="70" height="70">
-						<use href="./IMG/sprite.svg#"></use>
+						<use href="./IMG/symbol-defs.svg#icon-clock"></use>
 					</svg>
 				</div>
 				<h3 class="advantages-title">Punctuality</h3><p class="advantages-text">The task of the organization, in particular the framework and place of training of personnel entails.</p>
@@ -70,7 +77,7 @@
 			<li class="advantages-item">
 				<div class="advantages-icon">
 					<svg width="70" height="70">
-						<use href="./IMG/sprite.svg/#antenna.svg"></use>
+						<use href="./IMG/symbol-defs.svg#icon-diagram"></use>
 					</svg>
 				</div>
 				<h3 class="advantages-title">Planning</h3><p class="advantages-text">Similarly, consultation with a broad asset is largely conditional.</p>
@@ -78,7 +85,7 @@
 			<li class="advantages-item">
 				<div class="advantages-icon">
 					<svg width="70" height="70">
-						<use href="./IMG/sprite.svg/#antenna.svg"></use>
+						<use href="./IMG/symbol-defs.svg#icon-astronaut"></use>
 					</svg>
 				</div>
 				<h3 class="advantages-title">Modern technology</h3><p class="advantages-text">The significance of these problems is so obvious that the implementation of planned targets.</p>
@@ -109,14 +116,44 @@
 		  <ul class="comandos-list list">
 			  <li class="comandos-box">
 					<img class="" src="./IMG/Staff/img.png" alt="specialist Product Designer" width="270" height="260"/>
+
 					<div class="comandos-content">
 						<h3 class="comandos-title">Igor Demyanrnko</h3><p class="comandos-text">Product Designer</p>
+
+						<ul class="social-network-list list">
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-instagram"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-twitter"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-facebook"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-linkedin"></use>
+							</svg></a></li>
+						</ul>
 					 </div>
 			  </li>
 			  <li class="comandos-box">
 					<img class="" src="./IMG/Staff/img-1.png" alt="specialist Frontend Developer" width="270" height="260"/>
 					<div class="comandos-content">
 						<h3 class="comandos-title">Olga Repena</h3> <p class="comandos-text">Frontend Developer</p>
+						<ul class="social-network-list list">
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-instagram"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-twitter"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-facebook"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-linkedin"></use>
+							</svg></a></li>
+						</ul>
 					</div>
 
 			  </li>
@@ -124,6 +161,20 @@
 					<img class="" src="./IMG/Staff/img-2.png" alt="specialist Marketing" width="270" height="260"/>
 					<div class="comandos-content">
 						<h3 class="comandos-title">Nikolay Tarasov</h3> <p class="comandos-text">Marketing</p>
+						<ul class="social-network-list list">
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-instagram"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-twitter"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-facebook"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-linkedin"></use>
+							</svg></a></li>
+						</ul>
 					</div>
 
 			  </li>
@@ -131,25 +182,79 @@
 					<img class="" src="./IMG/Staff/img-3.png" alt="specialist Designer" width="270" height="260"/>
 					<div class="comandos-content">
 						<h3 class="comandos-title">Mihail Ermakov</h3> <p class="comandos-text">UI Designer</p>
+						<ul class="social-network-list list">
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-instagram"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-twitter"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-facebook"></use>
+							</svg></a></li>
+							<li class="social-network-item"> <a class="social-network-link link" href=""><svg class="social-network-svg"> 
+								<use href="./IMG/symbol-defs.svg#icon-linkedin"></use>
+							</svg></a></li>
+						</ul>
 					</div>
-
 			  </li>
 		  </ul>
+</div>
+	  </section>
+
+	  <section class="section-client">
+<h2 class="client-title"> Our client</h2>
+<div>
+	<ul class="client-list list">
+<li>
+	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group"></use></svg></a>
+</li>
+<li>
+	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-1"></use></svg></a>
+</li>
+<li>
+	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-2"></use></svg></a>
+</li>
+<li>
+	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-3"></use></svg></a>
+</li>
+<li>
+	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-4"></use></svg></a>
+</li>
+<li>
+	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-5"></use></svg></a>
+</li>
+	</ul>
 </div>
 	  </section>
 	</main>
 		
 	<footer class="footer">
 		<div class="container">
-		 <a href="./index.html" class="footer-logo"> 
+
+			 <div class="address">
+			 <address>
+		 <a href="./index.html" class="footer-logo">
 			<samp class="accent">Web</samp>Studio</a>
-		<address class="">
-			<ul class="address list">
-			  <li class="footer-item"><a href="https://goo.gl/maps/rWH6WUW4P8LsXruM8" class="footer-contacts city">Kyiv, Lesia Ukrainka Ave, 26</a></li> 
+			<ul class="list">
+			  <li class="footer-item">
+				<a href="https://goo.gl/maps/rWH6WUW4P8LsXruM8" class="footer-contacts city">Kyiv, Lesia Ukrainka Ave, 26</a></li>
 			  <li class="footer-item"><a href="" class="footer-contacts">info@devstudio.com</a></li>
 			  <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts">+38 096 111 11 11</a></li>
 			</ul>
 		</address>
+		</div>
+
+		<div class="join">
+			<h3 class="join-title">Join to us</h3>
+			<ul class="join-list list">
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+			</ul>
+		</div>
+
 		</div>
 	</footer>
   </body>
