--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,18 @@
 			  <li class="item"><a href="" class="link">Contact</a></li>
 		  </ul>
 		  </nav>
+
 		  	<ul class="auth-nav list">
-			  <li class="auth-nav-item"><a href="" class="link">info@devstudio.com</a></li>
-			  <li class="auth-nav-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+			  <li class="auth-nav-item">
+				<a class="contacts-data" href="mailto:info@devstudio.com"><svg class="contacts-svg" width="16" height="12">
+					<use href="./IMG/symbol-defs.svg#icon-envelope"></use>
+				</svg>info@devstudio.com</a>
+			  </li>
+			  <li class="auth-nav-item">
+				<a href="tel:+380961111111" class="contacts-data"><svg class="contacts-svg" width="16" height="12">
+					<use href="./IMG/symbol-defs.svg#icon-tel"></use>
+				</svg>+38 096 111 11 11</a>
+			</li>
 		  </ul>
 		</div>
 	  </header>
@@ -126,15 +135,30 @@
 
 	<footer class="footer">
 		<div class="container">
-		 <a href="./index.html" class="footer-logo"> 
+
+			 <div class="address">
+			 <address>
+		 <a href="./index.html" class="footer-logo">
 			<samp class="accent">Web</samp>Studio</a>
-		<address class="">
-			<ul class="footer-list list">
-			  <li class="footer-item"><a href="https://goo.gl/maps/rWH6WUW4P8LsXruM8" class="footer-contacts city">Kyiv, Lesia Ukrainka Ave, 26</a></li> 
+			<ul class="list">
+			  <li class="footer-item">
+				<a href="https://goo.gl/maps/rWH6WUW4P8LsXruM8" class="footer-contacts city">Kyiv, Lesia Ukrainka Ave, 26</a></li>
 			  <li class="footer-item"><a href="" class="footer-contacts">info@devstudio.com</a></li>
-			  <li class="footer-item"><a href="" class="footer-contacts">+38 096 111 11 11</a></li>
+			  <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts">+38 096 111 11 11</a></li>
 			</ul>
 		</address>
+		</div>
+
+		<div class="join">
+			<h3 class="join-title">Join to us</h3>
+			<ul class="join-list list">
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+			</ul>
+		</div>
+
 		</div>
 	</footer>
 </body>
