--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 	  <section class="examples">
 <div class="container">
-			  <h2 class="examples-title">What we do</h2>
+			  <h2 class="page-title">What we do</h2>
 		  <ul class="examples-list list">
 			  <li class="examples-img"><img src="./IMG/Web/box1.png" alt="typing on laptop" width="370" height="294" /> </li>
 			  <li class="examples-img"> <img src="./IMG/Web/box2.png" alt="design smartphon" width="370" height="294" /> </li>
@@ -111,7 +111,7 @@
 
 	  <section class="comandos">
 <div class="container">
-			  <h2 class="examples-title">Our Comandos</h2>
+			  <h2 class="page-title">Our Comandos</h2>
 			  
 		  <ul class="comandos-list list">
 			  <li class="comandos-box">
@@ -203,29 +203,32 @@
 	  </section>
 
 	  <section class="section-client">
-<h2 class="client-title"> Our client</h2>
+<div class="container">
+	<h2 class="page-title"> Our client</h2>
 <div>
 	<ul class="client-list list">
-<li>
-	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group"></use></svg></a>
+<li class="client-item">
+	<a class="client-link link" href=""><svg class="client-svg" width="41" height="46.7"><use href="./IMG/symbol-defs.svg#icon-group"></use></svg></a>
 </li>
-<li>
-	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-1"></use></svg></a>
+<li class="client-item">
+	<a class="client-link link" href=""><svg class="client-svg" width="40" height="52"><use href="./IMG/symbol-defs.svg#icon-group-1"></use></svg></a>
 </li>
-<li>
-	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-2"></use></svg></a>
+<li class="client-item">
+	<a class="client-link link" href=""><svg class="client-svg" width="43.46" height="41.18"><use href="./IMG/symbol-defs.svg#icon-group-2"></use></svg></a>
 </li>
-<li>
-	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-3"></use></svg></a>
+<li class="client-item">
+	<a class="client-link link" href=""><svg class="client-svg" width="84.44" height="40.62"><use href="./IMG/symbol-defs.svg#icon-group-3"></use></svg></a>
 </li>
-<li>
-	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-4"></use></svg></a>
+<li class="client-item">
+	<a class="client-link link" href=""><svg class="client-svg" width="62.54" height="45.43"><use href="./IMG/symbol-defs.svg#icon-group-4"></use></svg></a>
 </li>
-<li>
-	<a class="client-link link" href=""><svg class="client-svg"><use href="./IMG/symbol-defs.svg#icon-group-5"></use></svg></a>
+<li class="client-item">
+	<a class="client-link link" href=""><svg class="client-svg" width="93.79" height="43.93"><use href="./IMG/symbol-defs.svg#icon-group-5"></use></svg></a>
 </li>
 	</ul>
 </div>
+</div>
+
 	  </section>
 	</main>
 		
