--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@
 			  <li class="footer-item">
 				<a href="https://goo.gl/maps/rWH6WUW4P8LsXruM8" class="footer-contacts city">Kyiv, Lesia Ukrainka Ave, 26</a></li>
 			  <li class="footer-item"><a href="" class="footer-contacts">info@devstudio.com</a></li>
-			  <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts">+38 096 111 11 11</a></li>
+			  <li class="footer-item last"><a href="tel:+380991111111" class="footer-contacts">+38 096 111 11 11</a></li>
 			</ul>
 		</address>
 		</div>
