--- a/portfolio.html
+++ b/portfolio.html
@@ -152,10 +152,10 @@
 		<div class="join">
 			<h3 class="join-title">Join to us</h3>
 			<ul class="join-list list">
-<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/sprite.svg#instagram"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/sprite.svg#twitter"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/sprite.svg#facebook"></use></svg></a></li>
+<li class="join-item"><a class="join-link link" href=""><svg class="join-svg"><use href="./IMG/sprite.svg#linkedin"></use></svg></a></li>
 			</ul>
 		</div>
 
