--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,12 @@
 		  	<ul class="auth-nav list">
 			  <li class="auth-nav-item">
 				<a class="contacts-data" href="mailto:info@devstudio.com"><svg class="contacts-svg" width="16" height="12">
-					<use href="./IMG/symbol-defs.svg#icon-envelope"></use>
+					<use href="./IMG/sprite.svg#envelope"></use>
 				</svg>info@devstudio.com</a>
 			  </li>
 			  <li class="auth-nav-item">
 				<a href="tel:+380961111111" class="contacts-data"><svg class="contacts-svg" width="16" height="12">
-					<use href="./IMG/symbol-defs.svg#icon-tel"></use>
+					<use href="./IMG/sprite.svg#tel"></use>
 				</svg>+38 096 111 11 11</a>
 			</li>
 		  </ul>
